[project]
name = "feh-barracks-skill-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=3.4.1",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
]
